# color_correction

./: .gitignore  CCM  CMakeLists.txt  Makefile  README.md  script.sh
ref/: LCC_CMC.csv  ReferenceColor.csv  ReferenceColor2.csv
src/: Tham_so.txt  applyhsl2video.cpp  applyvideo2ccm.cpp  auto_add_image.cpp  hsl_rgb.cpp  load_ccm2video.cpp  loadvideo.cpp  main.cpp  process_image.cpp  test.cpp
src/mylib/: Linear_CCM.cpp  Linear_CCM.hpp  hsl.cpp  hsl.hpp
